bluec-tests/tests/invalid/expr_alignof/alignof_void_array4.c
int main(void) {
    return _Alignof(void[3][2][1]);
}